Wed Feb 25 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * gc.c:  default GC.limit=2e6*sizeof(VALUE)
        
        * eval.c:  added RB_GC_GUARDs to eval_slit() & more volatile tweaks
        
        * version.h:  bumped date, MBARI version 7A --> 8A

Tue Feb 24 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * cofigure.in:  added --enable-mbari-api and --with-wipe-sites

        * signal.c:  removed CHECK_INTS after kill
        
        * test/ruby/suicide.rb:  add tiny delay to let signal propogate
        
        * gc.c:  save regs properly on main stack before marking it!
        
        * eval.c:  numerous corrections in use of volatile variables w/setjmp()
        
        * version.h:  bumped date, MBARI version 7+ --> 7A

Fri Feb 13 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * signal.c:  CHECK_INTS after kill in case of suicide
        
        * version.h:  bumped date

Tue Feb 10 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * gc.c:  don't redundantly mark stack before base of current thread
        
        * version.h:  bumped date

Mon Feb 09 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * rubysig.h:  default values for STACK_WIPE_SITES if x86_64
                      cast builtin_alloca result to (VALUE *)
        
        * gc.c:  don't use builtin-frame-address at all
        
        * version.h:  bumped date

Sun Feb 08 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * rubysig.h:  changed default values for STACK_WIPE_SITES
        
        * gc.c:  don't trust config's USE_BUILTIN_FRAME_ADDRESS
        
        * version.h:  bumped date


Thu Jan 23 00:01:19 2009  Brent Roman  <brent@mbari.org>

        * rubysig.h:  remapped wipe methods to avoid values > 9
                      added cases for __ppc64__ and __x86_64__
        
        * missing/alloca.c:  made 64-bit clean
        
        * version.h:  bumped date
        
        